Fix footer overlap on mobile

--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -1,7 +1,6 @@
 .home {
   display: flex;
   width: 100%;
-  height: 100%;
 
   @include mq($on-palm) {
     flex-flow: column;
